Modify to avoid overflow of dog info

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -231,12 +231,14 @@ footer a {
 @media screen and (max-width: 575px) {
     .dogs {
         grid-template-columns: repeat(auto-fit, minmax(0rem, 100%));
+        overflow:auto;
     }
 }
 
 @media screen and (min-width: 576px) and (max-width: 1279px) {
     .dogs {
         grid-template-columns: repeat(auto-fit, minmax(0rem, 45%));
+        overflow:auto;
     }
 }
 
